unpackaged/main/default/objects/Welcome_Call__c/Welcome_Call__c.object-meta.xml
<CustomObject>
    <label>Welcome Call</label>
    <nameField>
        <displayFormat>WC-{0000000}</displayFormat>
        <label>Welcome Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>