unpackaged/main/default/objects/Welcome_Call__c/fields/A_Business_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>A_Business_Legal_Name__c</fullName>
    <description>Answer to confirm business legal name and ownership % question</description>
    <inlineHelpText>Answer to confirm business legal name and ownership % question</inlineHelpText>
    <label>A: Business Legal Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>