unpackaged/main/default/objects/Welcome_Call__c/fields/A_Contract_Signing_Authority__c.field-meta.xml
<CustomField>
    <fullName>A_Contract_Signing_Authority__c</fullName>
    <description>Answer to confirm authority to enter agreement for business question.</description>
    <inlineHelpText>Answer to confirm authority to enter agreement for business question.</inlineHelpText>
    <label>A: Contract Signing Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>