unpackaged/main/default/objects/Welcome_Call__c/fields/A_FRPSA_No_MCA_w_o_NF_Consent__c.field-meta.xml
<CustomField>
    <fullName>A_FRPSA_No_MCA_w_o_NF_Consent__c</fullName>
    <description>Answer to FRPSA - No MCA w/o NF Consent</description>
    <inlineHelpText>Answer to FRPSA - No MCA w/o NF Consent</inlineHelpText>
    <label>A: FRPSA - No MCA w/o NF Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>