unpackaged/main/default/objects/Welcome_Call__c/fields/A_FRPSA_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>A_FRPSA_Purchase_Amount__c</fullName>
    <description>Answer to FRPSA - Purchase Amount</description>
    <inlineHelpText>Answer to FRPSA - Purchase Amount</inlineHelpText>
    <label>A: FRPSA - Purchase Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>