unpackaged/main/default/objects/Welcome_Call__c/fields/A_FRPSA_Purchase_Percentage__c.field-meta.xml
<CustomField>
    <fullName>A_FRPSA_Purchase_Percentage__c</fullName>
    <description>Answer to FRPSA - Purchase %</description>
    <inlineHelpText>Answer to FRPSA - Purchase %</inlineHelpText>
    <label>A: FRPSA - Purchase %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>