unpackaged/main/default/objects/Welcome_Call__c/fields/A_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>A_Funding_Amount__c</fullName>
    <description>Answer to confirm Funding Amount question</description>
    <inlineHelpText>Answer to confirm Funding Amount question</inlineHelpText>
    <label>A: Funding Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>