unpackaged/main/default/objects/Welcome_Call__c/fields/A_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>A_Loan_Term__c</fullName>
    <description>Answer to confirm Loan Term question</description>
    <inlineHelpText>Answer to confirm Loan Term question</inlineHelpText>
    <label>A: Loan Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>