unpackaged/main/default/objects/Welcome_Call__c/fields/A_Need_Equipment_Financing__c.field-meta.xml
<CustomField>
    <fullName>A_Need_Equipment_Financing__c</fullName>
    <description>Answer to the question if the customer needs equipment financing.</description>
    <inlineHelpText>Answer to the question if the customer needs equipment financing.</inlineHelpText>
    <label>A: Need Equipment Financing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>