unpackaged/main/default/objects/Welcome_Call__c/fields/A_Net_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>A_Net_to_Customer__c</fullName>
    <description>Answer to Net to customer question (if required)</description>
    <inlineHelpText>Answer to Net to customer question (if required)</inlineHelpText>
    <label>A: Net to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>