unpackaged/main/default/objects/Welcome_Call__c/fields/A_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>A_Origination_Fee__c</fullName>
    <description>Answer to confirm Origination Fee question</description>
    <inlineHelpText>Answer to confirm Origination Fee question</inlineHelpText>
    <label>A: Origination Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>