unpackaged/main/default/objects/Welcome_Call__c/fields/A_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>A_Payment_Amount__c</fullName>
    <description>Answer to confirm Payment Amount in months question</description>
    <inlineHelpText>Answer to confirm Payment Amount in months question</inlineHelpText>
    <label>A: Payment Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>