unpackaged/main/default/objects/Welcome_Call__c/fields/A_PG_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>A_PG_Legal_Name__c</fullName>
    <description>Answer to Confirm Legal Name question</description>
    <inlineHelpText>Answer to Confirm Legal Name question</inlineHelpText>
    <label>A: PG Legal Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>