unpackaged/main/default/objects/Welcome_Call__c/fields/A_SSN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>A_SSN_Last_4__c</fullName>
    <description>Answer to confirm last 4 digits of SSN question</description>
    <inlineHelpText>Answer to confirm last 4 digits of SSN question</inlineHelpText>
    <label>A: SSN Last 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>