unpackaged/main/default/objects/Welcome_Call__c/fields/Answer_4__c.field-meta.xml
<CustomField>
    <fullName>Answer_4__c</fullName>
    <label>Daily Payments Confirmation A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>