unpackaged/main/default/objects/Welcome_Call__c/fields/Bankruptcy_Confirmation_Q__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Confirmation_Q__c</fullName>
    <defaultValue>"Filing for bankruptcy (either business or personal)?"</defaultValue>
    <label>Bankruptcy Confirmation Q</label>
    <length>255</length>
    <type>Text</type>
</CustomField>