unpackaged/main/default/objects/Welcome_Call__c/fields/Business_Change_Confirmation_Q__c.field-meta.xml
<CustomField>
    <fullName>Business_Change_Confirmation_Q__c</fullName>
    <defaultValue>"Do you currently or have you within the last 90 days had any plans, intentions, or discussions regarding:"</defaultValue>
    <label>Business Change Confirmation Q</label>
    <length>255</length>
    <type>Text</type>
</CustomField>