unpackaged/main/default/objects/Welcome_Call__c/fields/Business_Day_2nd__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_2nd__c</fullName>
    <formula>CASE( MOD(DATEVALUE(WC_Start_Date__c) - DATE( 1900, 1, 7 ), 7 ), 
0, DATEVALUE(WC_Start_Date__c) + 0 + 2, /* Sun:Date+0 wknd day+1 day */ 
4, DATEVALUE(WC_Start_Date__c) + 1 + 2 + 1, /* Fri:Date+2 wknd days+1 day */ 
5, DATEVALUE(WC_Start_Date__c) + 2 + 2, /* Fri:Date+2 wknd days+1 day */ 
6, DATEVALUE(WC_Start_Date__c) + 1 + 2, /* Sat:Date+1 wknd days+1 day */ 
DATEVALUE(WC_Start_Date__c) + 2 /* Default (Mon/Tue/Wed):Date+1day */ 
)</formula>
    <label>Business Day (2nd)</label>
    <type>Date</type>
</CustomField>