unpackaged/main/default/objects/Welcome_Call__c/fields/Business_Name_Verification__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Verification__c</fullName>
    <defaultValue>"Please state the legal name of the business."</defaultValue>
    <description>Please state the legal name of the business.</description>
    <label>Business Name Verification:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>