unpackaged/main/default/objects/Welcome_Call__c/fields/Call_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Call_Instructions__c</fullName>
    <defaultValue>"State Yes or No for the following Questions."</defaultValue>
    <description>State Yes or No for the following questions.</description>
    <label>Call Instructions:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>