unpackaged/main/default/objects/Welcome_Call__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <description>This field will capture the customer's cell phone number.</description>
    <inlineHelpText>Please ask the customer for their cell phone number.</inlineHelpText>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>