unpackaged/main/default/objects/Welcome_Call__c/fields/Closing_Business_Confirmation_Q__c.field-meta.xml
<CustomField>
    <fullName>Closing_Business_Confirmation_Q__c</fullName>
    <defaultValue>"Closing the business, temporarily or permanently?"</defaultValue>
    <label>Closing Business Confirmation Q</label>
    <length>255</length>
    <type>Text</type>
</CustomField>