unpackaged/main/default/objects/Welcome_Call__c/fields/Completed_WC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Completed_WC_Phone__c</fullName>
    <label>Completed WC Phone</label>
    <type>Phone</type>
</CustomField>