unpackaged/main/default/objects/Welcome_Call__c/fields/Different_Address_Provided_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Different_Address_Provided_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different Address Provided by Customer</label>
    <type>Checkbox</type>
</CustomField>