unpackaged/main/default/objects/Welcome_Call__c/fields/Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip__c</fullName>
    <description>used in broker welcome call.</description>
    <label>Home Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>