unpackaged/main/default/objects/Welcome_Call__c/fields/Last_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_SSN__c</fullName>
    <label>Last 4 SSN (Signor)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>