unpackaged/main/default/objects/Welcome_Call__c/fields/Moving_Business_Confirmation_A__c.field-meta.xml
<CustomField>
    <fullName>Moving_Business_Confirmation_A__c</fullName>
    <label>Moving Business Confirmation A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>