unpackaged/main/default/objects/Welcome_Call__c/fields/Net_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Net_to_Customer__c</fullName>
    <description>This field will be populated by workflow from the Net to Customer field on the Opportunity.  This should only be populated when a renewal Welcome Call is created.</description>
    <inlineHelpText>This field will be populated by workflow from the Net to Customer field on the Opportunity.  This should only be populated when a renewal Welcome Call is created.</inlineHelpText>
    <label>Net to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>