unpackaged/main/default/objects/Welcome_Call__c/fields/Number_of_Daily_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Daily_Payments__c</fullName>
    <label># of Daily Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>