unpackaged/main/default/objects/Welcome_Call__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>