unpackaged/main/default/objects/Welcome_Call__c/fields/Ownership_Confirmation_A__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Confirmation_A__c</fullName>
    <label>Ownership % Confirmation A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>