unpackaged/main/default/objects/Welcome_Call__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>This field will indicate if the funds will be released to the customer via ACH or wire.</description>
    <inlineHelpText>This field will indicate if the funds will be released to the customer via ACH or wire. Please select one option.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>