unpackaged/main/default/objects/Welcome_Call__c/fields/Physical_Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Phone_Number__c</fullName>
    <description>This field will capture the Physical business phone number from the customer.  Used in Broker welcome calls.</description>
    <inlineHelpText>This field will capture the Physical business phone number from the customer.</inlineHelpText>
    <label>Physical Business Phone Number</label>
    <type>Phone</type>
</CustomField>