unpackaged/main/default/objects/Welcome_Call__c/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <label>Physical City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>