unpackaged/main/default/objects/Welcome_Call__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <label>Physical State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>