unpackaged/main/default/objects/Welcome_Call__c/fields/Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip__c</fullName>
    <label>Physical Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>