unpackaged/main/default/objects/Welcome_Call__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <defaultValue>'What is your cell phone number?'</defaultValue>
    <description>'What is your cell phone number?'</description>
    <inlineHelpText>'What is your cell phone number?'</inlineHelpText>
    <label>Question 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>