unpackaged/main/default/objects/Welcome_Call__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <defaultValue>"Can you confirm you have signed the contract?"</defaultValue>
    <label>Signed Contract Confirmation Q</label>
    <length>255</length>
    <type>Text</type>
</CustomField>