unpackaged/main/default/objects/Welcome_Call__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <defaultValue>"Do you agree to the Funding Amount of XXXXX?"</defaultValue>
    <label>Funding Amount Confirmation Q</label>
    <length>255</length>
    <type>Text</type>
</CustomField>