unpackaged/main/default/objects/Welcome_Call__c/fields/Second_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Second_Review_Completed__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.WC_Funding_Approval_Status__c, 'Approved'), 'Yes', 'No')</formula>
    <label>Second Review Completed</label>
    <type>Text</type>
</CustomField>