unpackaged/main/default/objects/Welcome_Call__c/fields/Selling_Business_Confirmation_A__c.field-meta.xml
<CustomField>
    <fullName>Selling_Business_Confirmation_A__c</fullName>
    <label>Selling Business Confirmation A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>