unpackaged/main/default/objects/Welcome_Call__c/fields/Signor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Signor_Mobile__c</fullName>
    <label>Signor Mobile #</label>
    <type>Phone</type>
</CustomField>