unpackaged/main/default/objects/Welcome_Call__c/fields/Signor_Name__c.field-meta.xml
<CustomField>
    <fullName>Signor_Name__c</fullName>
    <label>Signor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>