unpackaged/main/default/objects/Welcome_Call__c/fields/Total_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayment_Amount__c</fullName>
    <label>Total Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>