unpackaged/main/default/objects/Welcome_Call__c/fields/Verification_of_Name__c.field-meta.xml
<CustomField>
    <fullName>Verification_of_Name__c</fullName>
    <defaultValue>"State your legal First and Last Name"</defaultValue>
    <description>"State your legal First and Last Name"</description>
    <inlineHelpText>"State your legal First and Last Name"</inlineHelpText>
    <label>Verification of Name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>