unpackaged/main/default/objects/Welcome_Call__c/fields/Verify_FEIN__c.field-meta.xml
<CustomField>
    <fullName>Verify_FEIN__c</fullName>
    <description>Answer to Verify FEIN question</description>
    <inlineHelpText>Answer to Verify FEIN question</inlineHelpText>
    <label>Verify FEIN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>