unpackaged/main/default/objects/Welcome_Call__c/fields/WC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>WC_Completed_Date__c</fullName>
    <label>WC Completed Date</label>
    <type>DateTime</type>
</CustomField>