unpackaged/main/default/objects/Welcome_Call__c/recordTypes/DIRECT_50K.recordType-meta.xml
<RecordType>
    <fullName>DIRECT_50K</fullName>
    <active>true</active>
    <label>DIRECT &lt;$50K</label>
</RecordType>