unpackaged/main/default/objects/Welcome_Call__c/recordTypes/FRPSA.recordType-meta.xml
<RecordType>
    <fullName>FRPSA</fullName>
    <active>true</active>
    <description>FRPSA</description>
    <label>FRPSA</label>
</RecordType>