unpackaged/main/default/objects/Welcome_Call__c/recordTypes/MLP.recordType-meta.xml
<RecordType>
    <fullName>MLP</fullName>
    <active>true</active>
    <description>Monthly Loan Product</description>
    <label>MLP</label>
</RecordType>