unpackaged/main/default/objects/Welcome_Call__c/recordTypes/NEW.recordType-meta.xml
<RecordType>
    <fullName>NEW</fullName>
    <active>true</active>
    <label>NEW</label>
</RecordType>