unpackaged/main/default/objects/Welcome_Call__c/recordTypes/NEW_New_Logic.recordType-meta.xml
<RecordType>
    <fullName>NEW_New_Logic</fullName>
    <active>true</active>
    <description>Used for Welcome Calls underwritten by New Logic.</description>
    <label>NEW - New Logic</label>
</RecordType>