unpackaged/main/default/objects/Welcome_Call__c/recordTypes/RENEWAL.recordType-meta.xml
<RecordType>
    <fullName>RENEWAL</fullName>
    <active>true</active>
    <label>RENEWAL</label>
</RecordType>