unpackaged/main/default/objects/Welcome_Call__c/recordTypes/WC_New.recordType-meta.xml
<RecordType>
    <fullName>WC_New</fullName>
    <active>true</active>
    <label>WC New</label>
</RecordType>