unpackaged/main/default/objects/Welcome_Call__c/recordTypes/WC_No_Call.recordType-meta.xml
<RecordType>
    <fullName>WC_No_Call</fullName>
    <active>true</active>
    <description>Used for Welcome Call records where no Welcome Call was required</description>
    <label>WC No Call</label>
</RecordType>